--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   text-shadow: 5px 5px 6px #000000, 0 0 10px black;
+  font-family: fantasy;
+  /* font-dis; */
   
   
   
